FileInfo -> UploadFileInfo로 수정